Updated the templates - Added a Keywords heading with an anchor - Fixed arg.defaultValue

--- a/src/Libdoc2Text/templates/library.adoc.jinja
+++ b/src/Libdoc2Text/templates/library.adoc.jinja
@@ -4,21 +4,23 @@
 {{doc}}
 ++++
 
-{% for keyword in keywords %}
-== {{keyword.name}}
+== [[Keywords]]Keywords
 
-=== Arguments
+{% for keyword in keywords %}
+=== {{keyword.name}}
+
+==== Arguments
 
 |===
 |Name |Default value
 {% for arg in keyword.args %}
 |{{arg.name}}
-|{{arg.type}}
+|{{arg.defaultValue}}
 
 {% endfor %}
 |===
 
-=== Documentation
+==== Documentation
 
 ++++
 {{keyword.doc}}
